--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "rspress": "^1.31.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0"
   }
 }
