--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "All Rights Reserved",
   "devDependencies": {
     "rspress": "^1.31.1",
+    "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
