--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "author": "",
   "license": "All Rights Reserved",
   "devDependencies": {
+    "@rspress/plugin-client-redirects": "^1.38.0",
     "rspress": "^1.43.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "@rspress/plugin-client-redirects": "^1.38.0"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "lucide-react": "^0.482.0",
     "react-collapse": "^5.1.1"
   }
 }
